RbA Build/src/objects/Misc_Pricing_Config__c.object
<CustomObject>
    <description>Pricing Configuration for construction materials and miscellaneous unit and job charges</description>
    <fields>
        <fullName>Forms_Displayed_On__c</fullName>
        <description>List of forms that this pricing line item will display on.  Used by the mobile applications - could also be used internally</description>
        <inlineHelpText>Pick the forms this pricing line item will display on</inlineHelpText>
        <label>Forms Displayed On</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Installer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint &amp; Stain Production Work Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Cladding Work Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drywall Production Work Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Safe Work Practice Work Order</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <description>Open question, need to understand this better</description>
        <inlineHelpText>Need better help text here</inlineHelpText>
        <label>Pricing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulaic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_Formula__c</fullName>
        <description>This field hold information on how the quatnity ts is calculated</description>
        <inlineHelpText>This field hold information on how the quatnity ts is calculated</inlineHelpText>
        <label>Quantity Formula</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Misc Pricing Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Misc Pricing Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Misc Pricing Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>